--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -35,6 +35,10 @@ android {
         cruncherEnabled = false
     }
 
+    buildFeatures{
+        viewBinding = true
+    }
+
 }
 
 dependencies {
@@ -46,6 +50,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
