--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     //bottom-chip-nav
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
