--- a/md/SIBI/app/src/main/AndroidManifest.xml
+++ b/md/SIBI/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".ui.learning.LearningActivity" />
         <activity android:name=".ui.learning.LearningDetailActivity" />
+        <activity android:name=".ui.game.GameActivity" />
+        <activity android:name=".ui.practice.PracticeActivity" />
     </application>
 
 </manifest>
