--- a/md/SIBI/app/src/main/AndroidManifest.xml
+++ b/md/SIBI/app/src/main/AndroidManifest.xml
@@ -6,19 +6,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".SibiApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SIBI">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.splashscreen.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.learning.LearningActivity" />
         <activity android:name=".ui.learning.LearningDetailActivity" />
         <activity android:name=".ui.game.GameActivity" />
