--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -42,6 +42,7 @@ android {
 
     buildFeatures{
         viewBinding = true
+        mlModelBinding true
     }
 
 }
@@ -85,15 +86,15 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.4"
 
     // Camera API -- DO NOT UPDATE
-    implementation 'androidx.camera:camera-core:1.0.0-alpha04'
-    implementation 'androidx.camera:camera-camera2:1.0.0-alpha04'
+    implementation "androidx.camera:camera-camera2:1.0.0-beta10"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta10"
+    implementation "androidx.camera:camera-view:1.0.0-alpha17"
 
     // Task API
     implementation "com.google.android.gms:play-services-tasks:17.2.1"
 
     // Nightly TensorFlow Lite -- DO NOT UPDATE
-    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
 
@@ -118,5 +119,8 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //Leak Canary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
 }
