--- a/md/SIBI/app/src/main/AndroidManifest.xml
+++ b/md/SIBI/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SIBI">
-        <activity android:name=".ui.maingame.game.GameResultActivity"></activity>
+        <activity android:name=".ui.maingame.practice.PracticeResultActivity"></activity>
+        <activity android:name=".ui.maingame.game.GameResultActivity" />
         <activity android:name=".ui.contribute.ContributeCameraActivity" />
         <activity android:name=".ui.maingame.game.GameCameraActivity" />
         <activity android:name=".ui.maingame.practice.PracticeCameraActivity" />
