--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -86,9 +86,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.4"
 
     // Camera API -- DO NOT UPDATE
-    implementation "androidx.camera:camera-camera2:1.0.0-beta10"
-    implementation "androidx.camera:camera-lifecycle:1.0.0-beta10"
-    implementation "androidx.camera:camera-view:1.0.0-alpha17"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha04"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha04"
+    implementation "androidx.camera:camera-view:1.0.0-alpha24"
 
     // Task API
     implementation "com.google.android.gms:play-services-tasks:17.2.1"
