--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    //exoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:2.14.0"
+
 }
