--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -93,9 +93,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-tasks:17.2.1"
 
     // Nightly TensorFlow Lite -- DO NOT UPDATE
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
 
     // Base
     implementation 'androidx.core:core-ktx:1.5.0'
