--- a/md/SIBI/app/src/main/AndroidManifest.xml
+++ b/md/SIBI/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SIBI">
-        <activity android:name=".ui.contribute.ContributeResultActivity"></activity>
+        android:theme="@style/Theme.SIBI"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".ui.contribute.ContributeResultActivity" />
         <activity android:name=".ui.maingame.practice.PracticeResultActivity" />
         <activity android:name=".ui.maingame.game.GameResultActivity" />
         <activity android:name=".ui.contribute.ContributeCameraActivity" />
