--- a/md/SIBI/app/build.gradle
+++ b/md/SIBI/app/build.gradle
@@ -69,7 +69,6 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.35.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.google.dagger:hilt-compiler:2.35.1'
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     kaptAndroidTest "androidx.hilt:hilt-compiler:1.0.0"
 
@@ -84,7 +83,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation "androidx.fragment:fragment-ktx:1.3.4"
 
-    // Camera API -- DO NOT UPDATE
+    // Camera API
     implementation "androidx.camera:camera-camera2:1.1.0-alpha05"
     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha05"
     implementation "androidx.camera:camera-view:1.0.0-alpha25"
@@ -92,7 +91,7 @@ dependencies {
     // Task API
     implementation "com.google.android.gms:play-services-tasks:17.2.1"
 
-    // Nightly TensorFlow Lite -- DO NOT UPDATE
+    // Tensorflow Task Vision
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
 
     // Base
